--- a/index.html
+++ b/index.html
@@ -1,21 +1,70 @@
-<!doctype html>
-<html lang="nl">
-	
-<head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2122</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-</head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="./css/main.css">
+    <meta charset="utf-8">
+    <title>Welkom op de website van NS | NS</title>
+  </head>
+  <body>
+    <header>
+       <img src="https://www.ns.nl/static/generic/2.89.0/images/nslogo.svg" alt="Logo NS">
+       <ul>
+         <li>Acc</li>
+         <li>Menu</li>
+       </ul>
+    </header>
+    <main>
+      <section class="worksNotification">
+        <img src="./assets/ws.svg" alt="Waarschuwing">
+        <p>Werkzaamheden Rotterdam CS-Schiphol Airport-Amsterdam Centraal op 25 november 2021</p>
+      </section>
+      <section class="cont-travelAdvice">
+        <form class="travelAdvice">
+          <input type="text" name="" value="Amsterdam Centraal">
+          <input type="text" name="" value="Rotterdam Centraal">
+        </form>
+        <span class="travelAdvice-option tA-option-active">Vertrek</span>
+        <span class="travelAdvice-option">Aankomst</span>
+        <span class="travelAdvice-option">vr 26 nov 13:30</span>
+        <span class="travelAdvice-option">Nu</span>
+        <span class="travelAdvice-option">Opties</span>
+        <button type="button" name="retrieveTravelAdvice">Plannen en aanmelden</button>
+      </section>
+      <section class="CTAadvert">
+        <h2>40% korting in de daluren + weekend</h2>
+        <p>Profiteer van 1 maand gratis Flex Dal Voordeel, alleen nog t/m 30 november te bestellen.</p>
+        <p>Laatste kans: eerste maand <span>€ 0<span></p>
+        <button type="button" name="CTAadvert-button">Bekijk de aanbieding</button>
+      </section>
+      <section class="linkBlock">
+        <h2>Veelgezocht <span>ICON</span></h2>
+        <ul>
+          <li>Winnaar NS Publieksprijs 2021</li>
+          <li>Fietsplek aanmelden</li>
+          <li>Gebruik een veilig wachtwoord</li>
+          <li>Coronamaatregelen</li>
+          <li>Geplande werkzaamheden</li>
+          <li>Treinkaartje kopen</li>
+        </ul>
+      </section>
 
-<body>
-	<h1>Howdy FED2122</h1>
+      <section class="linkBlock">
+        <h2>Klantenservice <span>ICON</span></h2>
+        <ul>
+          <li>Winnaar NS Publieksprijs 2021</li>
+          <li>Fietsplek aanmelden</li>
+          <li>Gebruik een veilig wachtwoord</li>
+          <li>Coronamaatregelen</li>
+          <li>Geplande werkzaamheden</li>
+          <li>Treinkaartje kopen</li>
+        </ul>
+      </section>
+      <h2>Onze suggesties</h2>
+      <section class="CTA">
+        <h2>Elke dag een ander verhaal? Word conducteur.</h2>
+        <button type="button" name="CTA-button">De reis van morgen begint bij jou</button>
+      </section>
+    </main>
 
-	<script src="scripts/script.js"></script>
-</body>
-	
+  </body>
 </html>
