--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
        <img src="https://www.ns.nl/static/generic/2.89.0/images/nslogo.svg" alt="Logo NS">
        <ul>
-         <li>Acc</li>
+         <li>Account</li>
          <li>Menu</li>
        </ul>
     </header>
