--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <section class="worksNotification">
         <img src="./assets/ws.svg" alt="Waarschuwing">
-        <p>Werkzaamheden Rotterdam CS-Schiphol Airport-Amsterdam Centraal op 25 november 2021</p>
+        <p>Werkzaamheden Rotterdam Blaak-Schiphol Airport op 25 november 2021</p>
       </section>
       <section class="cont-travelAdvice">
         <form class="travelAdvice">
