Skip to content links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <header>
+      <a class="skip-to-content-link" href="#accessibility_travelAdvice">
+        Doorgaan naar reisplanner
+      </a>
+      <a class="skip-to-content-link" href="#accessibility_mainContent">
+        Doorgaan naar hoofdinhoud
+      </a>
        <img src="https://www.ns.nl/static/generic/2.89.0/images/nslogo.svg" alt="Logo NS">
        <ul>
          <li>Account</li>
@@ -18,7 +24,7 @@
         <img src="./assets/ws.svg" alt="Waarschuwing">
         <p>Werkzaamheden Rotterdam Blaak-Schiphol Airport op 25 november 2021</p>
       </section>
-      <section class="cont-travelAdvice">
+      <section id="accessibility_travelAdvice" class="cont-travelAdvice">
         <form class="travelAdvice">
           <input type="text" name="" value="Amsterdam Centraal">
           <input type="text" name="" value="Rotterdam Centraal">
@@ -30,7 +36,7 @@
         <span class="travelAdvice-option">Opties</span>
         <button type="button" name="retrieveTravelAdvice">Plannen en aanmelden</button>
       </section>
-      <section class="CTAadvert">
+      <section id="accessibility_mainContent" class="CTAadvert">
         <h2>40% korting in de daluren + weekend</h2>
         <p>Profiteer van 1 maand gratis Flex Dal Voordeel, alleen nog t/m 30 november te bestellen.</p>
         <p>Laatste kans: eerste maand <span>€ 0<span></p>
