--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </section>
       <section id="accessibility_travelAdvice" class="cont-travelAdvice">
         <form class="travelAdvice">
-          <div class="travelAdvice_ValueSwap"><img src="../FED2122/assets/wisselom.svg" alt=""></div>
-          <input type="text" name="" value="Amsterdam Centraal">
-          <input type="text" name="" value="Rotterdam Centraal">
+          <div class="travelAdvice_ValueSwap"><button onclick="travelAdvice_ValueSwap()"></button><img src="../FED2122/assets/wisselom.svg" alt=""></button></div>
+          <input id="tA_vertrekstation" type="text" name="" value="Amsterdam Centraal">
+          <input id="tA_aankomststation" type="text" name="" value="Rotterdam Centraal">
         <fieldset id="travelAdvice_VA">
           <input type="radio" name="f1-VA" id="f1-VA-V" class="Vertrek" />
           <label for="f1-VA-V" class="f1-VA-label label_Vertrek">Vertrek</label>
