--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
       <section id="accessibility_travelAdvice" class="cont-travelAdvice">
         <form class="travelAdvice" onsubmit="return false">
-          <div class="travelAdvice_ValueSwap"><button onclick="travelAdvice_ValueSwap()"></button><img src="../FED2122/assets/wisselom.svg" alt=""></button></div>
+          <div class="travelAdvice_ValueSwap"><button onclick="travelAdvice_ValueSwap()"></button></div>
           <input id="tA_vertrekstation" type="text" name="" value="Amsterdam Centraal">
           <input id="tA_aankomststation" type="text" name="" value="Rotterdam Centraal">
         <fieldset id="travelAdvice_VA">
