--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="./css/main.css">
-    <script src="../FED2122/assets/functions.js"></script>
+    <script src="../assets/functions.js"></script>
     <meta charset="utf-8">
     <title>Welkom op de website van NS | NS</title>
   </head>
@@ -28,8 +28,8 @@
       <section id="accessibility_travelAdvice" class="cont-travelAdvice">
         <form class="travelAdvice" onsubmit="return false">
           <div class="travelAdvice_ValueSwap"><button onclick="travelAdvice_ValueSwap()"></button></div>
-          <input id="tA_vertrekstation" type="text" name="" value="Amsterdam Centraal">
-          <input id="tA_aankomststation" type="text" name="" value="Rotterdam Centraal">
+          <input id="tA_vertrekstation" type="text" name="tA_vertrekstation" value="Amsterdam Centraal">
+          <input id="tA_aankomststation" type="text" name="tA_aankomststation" value="Rotterdam Centraal">
         <fieldset id="travelAdvice_VA">
           <input type="radio" name="f1-VA" id="f1-VA-V" class="Vertrek" />
           <label for="f1-VA-V" class="f1-VA-label label_Vertrek">Vertrek</label>
@@ -46,7 +46,7 @@
       <section id="accessibility_mainContent" class="CTAadvert">
         <h2>40% korting in de daluren + weekend</h2>
         <p>Profiteer van 1 maand gratis Flex Dal Voordeel, alleen nog t/m 30 november te bestellen.</p>
-        <p>Laatste kans: eerste maand <span>€ 0<span></p>
+        <p>Laatste kans: eerste maand <span>€ 0</span></p>
         <button type="button" name="CTAadvert-button">Bekijk de aanbieding</button>
       </section>
       <section class="linkBlock">
