--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="./css/main.css">
-    <script src="../assets/functions.js"></script>
+    <script src="functions.js"></script>
     <meta charset="utf-8">
     <title>Welkom op de website van NS | NS</title>
   </head>
