--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="./css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="functions.js"></script>
     <meta charset="utf-8">
     <title>Welkom op de website van NS | NS</title>
