--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <button type="button" name="retrieveTravelAdvice">Plannen en aanmelden</button>
     </section>
     <section id="accessibility_mainContent" class="CTAadvert">
-      <h2>40% korting in de daluren + weekend</h2>
+      <h2>40% korting in de dalsuren + weekend</h2>
       <p>Profiteer van 1 maand gratis Flex Dal Voordeel, alleen nog t/m 30 november te bestellen.</p>
       <p>Laatste kans: eerste maand <span>€ 0</span></p>
       <button type="button" name="CTAadvert-button">Bekijk de aanbieding</button>
@@ -56,11 +56,11 @@
       <h2>Veelgezocht <span>ICON</span></h2>
       <ul>
         <li><a href="#">NS Publieksprijs 2021</a></li>
-        <li><a href="#"></a>Fietsplek aanmelden</a></li>
-        <li><a href="#"></a>Gebruik een veilig wachtwoord</a></li>
-        <li><a href="#"></a>Coronamaatregelen</a></li>
-        <li><a href="#"></a>Geplande werkzaamheden</a></li>
-        <li><a href="#"></a>Treinkaartje kopen</a></li>
+        <li><a href="#">Fietsplek aanmelden</a></li>
+        <li><a href="#">Gebruik een veilig wachtwoord</a></li>
+        <li><a href="#">Coronamaatregelen</a></li>
+        <li><a href="#">Geplande werkzaamheden</a></li>
+        <li><a href="#">Treinkaartje kopen</a></li>
       </ul>
     </section>
 
@@ -68,11 +68,11 @@
       <h2 tabindex="0">Klantenservice <span>ICON</span></h2>
       <ul>
         <li><a href="#">NS Publieksprijs 2021</a></li>
-        <li><a href="#"></a>Fietsplek aanmelden</a></li>
-        <li><a href="#"></a>Gebruik een veilig wachtwoord</a></li>
-        <li><a href="#"></a>Coronamaatregelen</a></li>
-        <li><a href="#"></a>Geplande werkzaamheden</a></li>
-        <li><a href="#"></a>Treinkaartje kopen</a></li>
+        <li><a href="#">Fietsplek aanmelden</a></li>
+        <li><a href="#">Gebruik een veilig wachtwoord</a></li>
+        <li><a href="#">Coronamaatregelen</a></li>
+        <li><a href="#">Geplande werkzaamheden</a></li>
+        <li><a href="#">Treinkaartje kopen</a></li>
       </ul>
     </section>
     <h2 tabindex="0">Onze suggesties</h2>
