--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="nl" dir="ltr">
 
 <head>
+  <link rel="stylesheet" href="datepicker.min.css">
   <link rel="stylesheet" href="./css/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="functions.js"></script>
   <meta charset="utf-8">
   <title>Welkom op de website van NS | NS</title>
 </head>
 
 <body>
   <header>
-    <img src="https://www.ns.nl/static/generic/2.89.0/images/nslogo.svg" alt="Logo NS">
+    <img src="./assets/nsl.svg" alt="Logo NS">
     <a class="skip-to-content-link" href="#accessibility_travelAdvice">
       Doorgaan naar reisplanner
     </a>
@@ -20,40 +20,81 @@
     </a>
     <ul>
       <li><img src="./assets/account.svg" alt="Mijn NS"></li>
-      <li>Menu</li>
+      <li><img src="./assets/menu.jpg" alt="Menu"></li>
     </ul>
   </header>
   <main>
     <section class="worksNotification">
       <img src="./assets/ws.svg" alt="Waarschuwing">
-      <p>Werkzaamheden Rotterdam Blaak-Schiphol Airport op 25 november 2021</p>
+      <p>Werkzaamheden HSL Rotterdam Centraal - Schiphol Airport - Amsterdam Centraal tussen 9 en 13 december</p>
     </section>
     <section id="accessibility_travelAdvice" class="cont-travelAdvice">
       <form class="travelAdvice" onsubmit="return false">
-        <div class="travelAdvice_ValueSwap"><button onclick="travelAdvice_ValueSwap()"></button></div>
-        <input id="tA_vertrekstation" type="text" name="tA_vertrekstation" value="Amsterdam Centraal">
-        <input id="tA_aankomststation" type="text" name="tA_aankomststation" value="Rotterdam Centraal">
+        <label for="tA_vertrekstation">van</label>
+        <input id="tA_vertrekstation" type="text" name="tA_vertrekstation">
+        <div class="travelAdvice_ValueSwap"><button id="ValueSwap"></button></div>
+        <label for="tA_aankomststation">naar</label>
+        <input id="tA_aankomststation" type="text" name="tA_aankomststation">
         <fieldset id="travelAdvice_VA">
           <input type="radio" name="f1-VA" id="f1-VA-V" class="Vertrek" />
           <label for="f1-VA-V" class="f1-VA-label label_Vertrek">Vertrek</label>
           <input type="radio" name="f1-VA" id="f1-VA-A" class="Aankomst" />
           <label for="f1-VA-A" class="f1-VA-label label_Aankomst">Aankomst</label>
         </fieldset>
+        <fieldset>
+          <input type="text" name="tA_datum" id="tA_datum">
+          <!-- Dit is vanwege de externe JS-functie een tekstveld.-->
+          <input type="time" name="" id="tA_tijd">
+          <button name="todayButton" id="todayButton">Nu</button>
+        </fieldset>
       </form>
-
-      <span class="travelAdvice-option">vr 26 nov 13:30</span>
-      <span class="travelAdvice-option">Nu</span>
-      <span class="travelAdvice-option">Opties</span>
+      <button name="options" id="options">Opties</button>
+      <fieldset id="opties">
+        <form>
+          <label id="via_label" for="via">via</label>
+          <input id="via" type="text" name="via" placeholder="station">
+          <h3>Voorkeuren</h3>
+          <div id="opties_voorkeuren">
+            <input type="checkbox" name="voorkeuren" id="voorkeuren1">
+            <label for="voorkeuren1">Geen treinen met verplichte reservering</label>
+          </div>
+          <div id="opties_voorkeuren">
+            <input type="checkbox" name="voorkeuren" id="voorkeuren2">
+            <label for="voorkeuren2">Altijd Vrij of Trein Vrij abonnement</label>
+          </div>
+          <div id="opties_voorkeuren">
+            <input type="checkbox" name="voorkeuren" id="voorkeuren3">
+            <label for="voorkeuren3">Toegankelijk reizen</label>
+          </div>
+          <div id="opties_voorkeuren">
+            <input type="checkbox" name="voorkeuren" id="voorkeuren4">
+            <label for="voorkeuren4">Alleen sprinters</label>
+          </div>
+          <h3>Extra minuten overstaptijd</h3>
+          <div class="overstaptijd_container">
+            <input type="radio" name="extraoverstap" id="0" class="Vertrek" />
+            <label for="0" class="f1-VA-label label_Vertrek">0</label>
+            <input type="radio" name="extraoverstap" id="5" class="Vertrek" />
+            <label for="5" class="f1-VA-label label_Vertrek">+5</label>
+            <input type="radio" name="extraoverstap" id="10" class="Vertrek" />
+            <label for="10" class="f1-VA-label label_Vertrek">+10</label>
+            <input type="radio" name="extraoverstap" id="15" class="Vertrek" />
+            <label for="15" class="f1-VA-label label_Vertrek">+15</label>
+            <input type="radio" name="extraoverstap" id="20" class="Vertrek" />
+            <label for="20" class="f1-VA-label label_Vertrek">+20</label>
+          </div>
+        </form>
+      </fieldset>
       <button type="button" name="retrieveTravelAdvice">Plannen en aanmelden</button>
     </section>
-    <section id="accessibility_mainContent" class="CTAadvert">
+    <section id="accessibility_mainContent" tabindex="1" class="CTAadvert">
       <h2>40% korting in de dalsuren + weekend</h2>
       <p>Profiteer van 1 maand gratis Flex Dal Voordeel, alleen nog t/m 30 november te bestellen.</p>
       <p>Laatste kans: eerste maand <span>€ 0</span></p>
       <button type="button" name="CTAadvert-button">Bekijk de aanbieding</button>
     </section>
     <section class="linkBlock">
-      <h2>Veelgezocht <span>ICON</span></h2>
+      <h2>Veelgezocht <span><img src="./assets/vgz.svg" alt="Icoon meerdere personen"></span></h2>
       <ul>
         <li><a href="#">NS Publieksprijs 2021</a></li>
         <li><a href="#">Fietsplek aanmelden</a></li>
@@ -65,7 +106,8 @@
     </section>
 
     <section class="linkBlock">
-      <h2 tabindex="0">Klantenservice <span>ICON</span></h2>
+      <h2 tabindex="0">Klantenservice <span><img src="./assets/cs.svg" alt="Icoon klantenservice medewerker"></span>
+      </h2>
       <ul>
         <li><a href="#">NS Publieksprijs 2021</a></li>
         <li><a href="#">Fietsplek aanmelden</a></li>
@@ -80,8 +122,90 @@
       <h2>Elke dag een ander verhaal? Word conducteur.</h2>
       <button type="button" name="CTA-button">De reis van morgen begint bij jou</button>
     </section>
+    <section class="linkBlock">
+      <h2 tabindex="0">Spoordeelwinkel <span><img src="./assets/cs.svg" alt="Icoon klantenservice medewerker"></span>
+      </h2>
+      <ul>
+        <li><a href="#">NS Publieksprijs 2021</a></li>
+        <li><a href="#">Fietsplek aanmelden</a></li>
+        <li><a href="#">Gebruik een veilig wachtwoord</a></li>
+        <li><a href="#">Coronamaatregelen</a></li>
+        <li><a href="#">Geplande werkzaamheden</a></li>
+        <li><a href="#">Treinkaartje kopen</a></li>
+      </ul>
+    </section>
+    <section class="newsBlock">
+      <img src="./assets/codecoupe.jpg" alt="Reclame voor nieuwe podcast van Code tot Coupe">
+      <h3>Van code tot coupé</h3>
+      <p>In deze nieuwe vijfdelige podcastserie duikt Vivianne Bendermacher in de wereld van IT bij NS.</p>
+      <button>Meer informatie</button>
+    </section>
+    <section class="newsBlock">
+      <img src="./assets/disp.jpg" alt="Familie op perron naar Thalys-trein">
+      <h3>In 2022 naar Disneyland Paris</h3>
+      <p>Vanaf 18 maart reis je weer rechtstreeks naar Disneyland Paris. Met de trein. Hoe anders?</p>
+      <button>Meer informatie</button>
+    </section>
+    <section class="CTAadvert tw">
+      <h2>Treinwijzer</h2>
+      <p>Krijg een melding als de drukte toeneemt. Meld je reis aan in de NS-app.</p>
+      <button type="button" name="CTAadvert-button">Meer over Treinwijzer</button>
+    </section>
   </main>
-
+  <footer>
+    <div class="linkSection">
+      <h2 tabindex="0">Direct naar...</h2>
+      <ul>
+        <li><a href="#">NS Flex</a></li>
+        <li><a href="#">Reisinformatie</a></li>
+        <li><a href="#">NS Zakelijk</a></li>
+        <li><a href="#">Klantenservice</a></li>
+        <li><a href="#">SPOOR/digitaal</a></li>
+      </ul>
+    </div>
+    <div class="linkSection">
+      <h2 tabindex="0">Onze producten</h2>
+      <ul>
+        <li><a href="#">Kaartjes & toeslagen</a></li>
+        <li><a href="#">Abonnementen</a></li>
+        <li><a href="#">Deur tot deur</a></li>
+        <li><a href="#">Dagje uit</a></li>
+        <li><a href="#">Internationale treinkaartjes</a></li>
+      </ul>
+    </div>
+    <div class="linkSection">
+      <h2 tabindex="0">Meer NS</h2>
+      <ul>
+        <li><a href="#">Over NS</a></li>
+        <li><a href="#">Werken bij NS</a></li>
+        <li><a href="#">Mobiliteitsadvies</a></li>
+        <li><a href="#">Nieuws</a></li>
+        <li><a href="#">Prestaties</a></li>
+      </ul>
+    </div>
+    <div class="linkSection">
+      <h2 tabindex="0">Sociale media</h2>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">YouTube</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+    </div>
+    <div class="linkSection">
+      <ul>
+        <li><a href="#">Disclaimer</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Cookies</a></li>
+        <li><a href="#">Bedrijfsinformatie</a></li>
+        <li><a href="#">Voorwaarden en folders</a></li>
+      </ul>
+      <img src="./assets/nsl.svg" alt="Logo van NS">
+    </div>
+  </footer>
+  <script src="datepicker.min.js"></script>
+  <script src="functions.js"></script>
 </body>
 
 </html>
