--- a/index.html
+++ b/index.html
@@ -104,17 +104,27 @@
         <li><a href="#">Treinkaartje kopen</a></li>
       </ul>
     </section>
-
     <section class="linkBlock">
       <h2 tabindex="0">Klantenservice <span><img src="./assets/cs.svg" alt="Icoon klantenservice medewerker"></span>
       </h2>
       <ul>
-        <li><a href="#">NS Publieksprijs 2021</a></li>
-        <li><a href="#">Fietsplek aanmelden</a></li>
-        <li><a href="#">Gebruik een veilig wachtwoord</a></li>
-        <li><a href="#">Coronamaatregelen</a></li>
-        <li><a href="#">Geplande werkzaamheden</a></li>
-        <li><a href="#">Treinkaartje kopen</a></li>
+        <li><a href="#">Abonnement wijzigen</a></li>
+        <li><a href="#">Vergeten uit te checken</a></li>
+        <li><a href="#">Geld terug bij vertraging</a></li>
+        <li><a href="#">OV-fiets</a></li>
+        <li><a href="#">Fietsenstallingen</a></li>
+      </ul>
+    </section>
+    <section class="linkBlock">
+      <h2 tabindex="0">Producten <span><img src="./assets/pord.svg" alt="Icoon hand met OV-chipkaart"></span>
+      </h2>
+      <ul>
+        <li><a href="#">NS Flex</a></li>
+        <li><a href="#">Online een kaartje kopen</a></li>
+        <li><a href="#">Abonnementen</a></li>
+        <li><a href="#">Spoordeelwinkel: Trein + Uitje</a></li>
+        <li><a href="#">Deur-tot-deurdiensten</a></li>
+        <li><a href="#">Internationale treinkaartjes</a></li>
       </ul>
     </section>
     <h2 tabindex="0">Onze suggesties</h2>
@@ -123,15 +133,14 @@
       <button type="button" name="CTA-button">De reis van morgen begint bij jou</button>
     </section>
     <section class="linkBlock">
-      <h2 tabindex="0">Spoordeelwinkel <span><img src="./assets/cs.svg" alt="Icoon klantenservice medewerker"></span>
+      <h2 tabindex="0">Spoordeelwinkel <span><img src="./assets/vgz.svg" alt="Icoon meerdere personen"></span>
       </h2>
       <ul>
-        <li><a href="#">NS Publieksprijs 2021</a></li>
-        <li><a href="#">Fietsplek aanmelden</a></li>
-        <li><a href="#">Gebruik een veilig wachtwoord</a></li>
-        <li><a href="#">Coronamaatregelen</a></li>
-        <li><a href="#">Geplande werkzaamheden</a></li>
-        <li><a href="#">Treinkaartje kopen</a></li>
+        <li><a href="#">Overnachting Utrecht v.a. €55</a></li>
+        <li><a href="#">Madurodam v.a. €33</a></li>
+        <li><a href="#">Efteling v.a. €49</a></li>
+        <li><a href="#">WILDLANDS v.a. €31</a></li>
+
       </ul>
     </section>
     <section class="newsBlock">
