--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
       <form class="travelAdvice" onsubmit="return false">
         <fieldset id="stations">
           <legend>Stations</legend>
-          <label for="tA_vertrekstation">van</label>
-          <input id="tA_vertrekstation" type="text" name="tA_vertrekstation">
-          <button id="ValueSwap"></button>
-          <label for="tA_aankomststation">naar</label>
-          <input id="tA_aankomststation" type="text" name="tA_aankomststation">
+          <label for="Station-Van">Van</label>
+          <input type="text" name="Station-Van" id="Station-Van">
+          <label for="Station-Naar">Naar</label>
+          <input type="text" name="Station-Naar" id="Station-Naar">
         </fieldset>
 
         <fieldset id="travelAdvice_VA">
