Def Commit 23 jan

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </ul>
     </section>
     <section class="linkBlock">
-      <h2 tabindex="0">Klantenservice <span><img src="./assets/cs.svg" alt="Icoon klantenservice medewerker"></span>
+      <h2 tabindex="0">Klantenservice <span><img src="./assets/CS.svg" alt="Icoon klantenservice medewerker"></span>
       </h2>
       <ul>
         <li><a href="#">Abonnement wijzigen</a></li>
